; ModuleID = '/home/carl/AnghaBench/esp-idf/components/fatfs/diskio/extr_diskio_sdmmc.c_ff_sdmmc_write.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/fatfs/diskio/extr_diskio_sdmmc.c_ff_sdmmc_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@s_cards = common dso_local global i32** null, align 8
@ESP_OK = common dso_local global i64 0, align 8
@TAG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [31 x i8] c"sdmmc_write_blocks failed (%d)\00", align 1
@RES_ERROR = common dso_local global i32 0, align 4
@RES_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ff_sdmmc_write(i64 %0, i64* %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  %7 = alloca i64*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca i64, align 8
  store i64 %0, i64* %6, align 8
  store i64* %1, i64** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  %12 = load i32**, i32*** @s_cards, align 8
  %13 = load i64, i64* %6, align 8
  %14 = getelementptr inbounds i32*, i32** %12, i64 %13
  %15 = load i32*, i32** %14, align 8
  store i32* %15, i32** %10, align 8
  %16 = load i32*, i32** %10, align 8
  %17 = call i32 @assert(i32* %16)
  %18 = load i32*, i32** %10, align 8
  %19 = load i64*, i64** %7, align 8
  %20 = load i32, i32* %8, align 4
  %21 = load i32, i32* %9, align 4
  %22 = call i64 @sdmmc_write_sectors(i32* %18, i64* %19, i32 %20, i32 %21)
  store i64 %22, i64* %11, align 8
  %23 = load i64, i64* %11, align 8
  %24 = load i64, i64* @ESP_OK, align 8
  %25 = icmp ne i64 %23, %24
  br i1 %25, label %26, label %31

26:                                               ; preds = %4
  %27 = load i32, i32* @TAG, align 4
  %28 = load i64, i64* %11, align 8
  %29 = call i32 @ESP_LOGE(i32 %27, i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str, i64 0, i64 0), i64 %28)
  %30 = load i32, i32* @RES_ERROR, align 4
  store i32 %30, i32* %5, align 4
  br label %33

31:                                               ; preds = %4
  %32 = load i32, i32* @RES_OK, align 4
  store i32 %32, i32* %5, align 4
  br label %33

33:                                               ; preds = %31, %26
  %34 = load i32, i32* %5, align 4
  ret i32 %34
}

declare dso_local i32 @assert(i32*) #1

declare dso_local i64 @sdmmc_write_sectors(i32*, i64*, i32, i32) #1

declare dso_local i32 @ESP_LOGE(i32, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
